address Dick's comments

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -128,24 +128,28 @@ Majoris \citep{Milam2007a}, the post-AGB star envelope CRL 2688
 \citep{Highberger2003a}, and the AGB star wind around OH 231+4.2
 \citep{Sanchez-Contreras2018a}.  In these sources, they exist only in a limited
 range of radii from the central star as they are
-% blown away
 carried outward
 in slow winds \citep{Herwig2005a}.  The limited environments in which these
 molecules have been detected suggests that they persist in the gas phase
 for only a brief period 
-% when being ejected from dying stars before being
 before they are incorporated into dust grains.
 This transient gas-phase abundance is analogous to that which makes SiO an
 excellent tracer of recent shock events: Si is sputtered from grains into the
 gas phase where it reacts with oxygen to form SiO.  Further reactions rapidly
 form SiO$_2$, depleting the gas-phase SiO abundance, and making that molecule
-an indicator of a recent shock \citep{Schilke1997a}.  Thus, if the production
-pathways, and role of the physical environment on those pathways, can be
-constrained for NaCl and KCl, the presence of these molecules has the potential
-to be a powerful tracer of physical conditions and history in a source. 
-\rlp{the point of the Science version was that NaCl and KCl are potentially
-unique tracers of disks around massive stars -- this final sentence doesn't
-actually say that!}
+an indicator of a recent shock \citep{Schilke1997a}. 
+
+If the production pathways, and role of the physical environment on those
+pathways, can be constrained for NaCl and KCl, the presence of these molecules
+has the potential to be a powerful tracer of gas physical conditions and
+history.  The rarity of these molecules in the ISM makes them a uniquely
+powerful tracer when they can be found.  Below, we describe the first
+detection of salts in a high-mass protostellar disk, unveiling what may
+be the only molecules that specifically trace disks around high-mass stars.
+
+% \rlp{the point of the Science version was that NaCl and KCl are potentially
+% unique tracers of disks around massive stars -- this final sentence doesn't
+% actually say that!}
 
 % \bam{Did we check w/ Holger here to see where he thought
 % the v=1 for NaCl was seen?  I still can't find a paper w/ it.  It's also
@@ -713,18 +717,14 @@ Sodium and potassium are rarely observed in the dense molecular interstellar
 medium.  They are usually assumed to be rapidly incorporated into dust grains
 after being ejected from dying stars \citep[e.g.,][]{Milam2007a}.  Since we
 observe NaCl and KCl in the atmosphere of the disk, it is clear that
-there is a zone where either dust has not  formed 
-\rlp{dust has not formed?? that is applicable to evolved stars, but not
-to a protstar like SrcI}
+there is a zone where either dust has not  formed  (which is not very likely
+in a protostellar system)
 or
 where dust is destroyed and returned to the gas phase.  We argue that the dust
 must be destroyed almost immediately as it is launched into the disk-driven
-outflow \citep{Hirota2017a}. We evaluate three scenarios for dust destruction:
-sputtering by high-energy particles, gas-phase formation from atomic gas, and
-thermal desorption.
-\rlp{gas phase formation from atomic gas is not a dust destruction scenario.
-Presumably you mean release of Na, K, and Cl from grains, which must then
-form NaCl and KCl in the gas phase.}
+outflow \citep{Hirota2017a}. We evaluate three scenarios for salt production:
+sputtering off of dust by high-energy particles, gas-phase formation from
+atomic gas, and thermal desorption.
 
 
 \textbf{(1) Sputtering:}
