fix bib entry for hirota

--- a/extracted.bib
+++ b/extracted.bib
@@ -1721,6 +1721,50 @@
   eid =           {A44},
 }
 
+@article{Hirota2017b,
+  author =        {{Hirota}, T. and {Machida}, M.~N. and
+                   {Matsushita}, Y. and {Motogi}, K. and {Matsumoto}, N. and
+                   {Kim}, M.~K. and {Burns}, R.~A. and {Honma}, M.},
+  journal =       {Nature Astronomy},
+  month =         jul,
+  pages =         {0146},
+  title =         {{Disk-driven rotating bipolar outflow in Orion Source
+                   I}},
+  volume =        {1},
+  year =          {2017},
+  abstract =      {One of the outstanding problems in star formation
+                   theory concerns the transfer of angular momentum so
+                   that mass can accrete onto a newly born young stellar
+                   object (YSO). From a theoretical standpoint, outflows
+                   and jets are predicted to play an essential role in
+                   the transfer of angular momentum 1,2,3,4 and their
+                   rotations have been reported for both low- 5 and
+                   high-mass 6,7 YSOs. However, little quantitative
+                   discussion on outflow launching mechanisms has been
+                   presented for high-mass YSOs due to a lack of
+                   observational data. Here we present a clear signature
+                   of rotation in the bipolar outflow driven by Orion
+                   Source I, a high-mass YSO candidate, using the
+                   Atacama Large Millimeter/Submillimeter Array (ALMA).
+                   A rotational transition of silicon monoxide (Si18O)
+                   reveals a velocity gradient perpendicular to the
+                   outflow axis, which is consistent with that of the
+                   circumstellar disk traced by a high excitation water
+                   line. The launching radii and outward velocity of the
+                   outflow are estimated to be >10 au and 10 km s-1,
+                   respectively. These parameters rule out the
+                   possibility that the observed outflow is produced by
+                   the entrainment of a high-velocity jet 8 , and that
+                   contributions from the stellar wind 9 or X-wind 10 ,
+                   which have smaller launching radii, are significant
+                   in the case of Source I. Thus these results provide
+                   convincing evidence of a rotating outflow directly
+                   driven by the magneto-centrifugal disk wind launched
+                   by a high-mass YSO candidate 6,11 .},
+  doi =           {10.1038/s41550-017-0146},
+  eid =           {0146},
+}
+
 @article{Baez-Rubio2018a,
   author =        {{B{\'a}ez-Rubio}, A. and {Jim{\'e}nez-Serra}, I. and
                    {Mart{\'{\i}}n-Pintado}, J. and {Zhang}, Q. and
