--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -749,7 +749,7 @@ in a protostellar system)
 or
 where dust is destroyed and returned to the gas phase.  We argue that the dust
 must be destroyed almost immediately as it is launched into the disk-driven
-outflow \citep{Hirota2017a}. We evaluate three scenarios for salt production:
+outflow \citep{Hirota2017b}. We evaluate three scenarios for salt production:
 sputtering off of dust by high-energy particles, gas-phase formation from
 atomic gas, and thermal desorption.
 
