swap positions of figures 6 and 7

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -525,6 +525,17 @@ is $T_{rot}\sim105$ K (Figure
 \ref{fig:rotationdiagrams}).  At such a low temperature, the populations of the
 vibrationally excited states should be effectively zero.  
 
+\begin{figure*}[!htp]
+\includegraphics[scale=1,width=3.5in]{figures/KCl_rotational_diagrams.pdf}
+\includegraphics[scale=1,width=3.5in]{figures/NaCl_rotational_diagrams.pdf}
+\caption{Rotational energy diagrams for the KCl and NaCl lines.  While each
+vibrational state can internally be explained reasonably well by a single
+consistent rotation temperature in the range $T_{rot}\sim50-150$ K, the population
+distribution between vibrational excitation states cannot.}
+\label{fig:rotationdiagrams}
+\end{figure*}
+
+
 Similarly, for each rotational transition observed from multiple vibrational
 levels, we measure a vibrational temperature.  We find values that range from
 1000-5000 K, although these fits are subject to very large
@@ -669,11 +680,11 @@ We show one example model in Figure \ref{fig:naclexcitationmodel}.
 
 \begin{figure*}[!htp]
 \includegraphics[scale=1,width=4in]{figures/simulated_populations_with_wacky_radiation_field.pdf}
-\caption{A model figure demonstrating that a bright emission feature in the mid-infrared may
+\caption{This figure demonstrates that a bright emission feature in the mid-infrared may
 explain the observed level populations.  The top panel shows the input radiation field as a blue
 line, with orange dots showing the NaCl transitions.  The narrow peak at 29 \um is artificially
 added, and it may represent a broad dust emission feature.
-The bottom panel shows a level population diagram similar to Figures \ref{fig:rotationdiagrams}.
+The bottom panel shows a level population diagram similar to Figure \ref{fig:rotationdiagrams}.
 The models include only v=0,1,2,3 because the collisional constants are limited to these states.
 The black dashed line shows a fit to the J=8 transitions of all vibrational states, yielding a high
 $\sim1000$ K temperature.  The red dashed line shows a fit to the observed $v=1$ lines, obtaining a
@@ -897,16 +908,6 @@ transitions in known astronomical molecular species. Indeed, prior work on
 vibrational excitation in modeling and assigned vibrationally excited ethyl
 cyanide in ALMA observations of Orion-KL revealed that even when catalogs for
 these states are available, they are often incomplete \citep{Fortman2012a}.
-
-\begin{figure*}[!htp]
-\includegraphics[scale=1,width=3.5in]{figures/KCl_rotational_diagrams.pdf}
-\includegraphics[scale=1,width=3.5in]{figures/NaCl_rotational_diagrams.pdf}
-\caption{Rotational energy diagrams for the KCl and NaCl lines.  While each
-vibrational state can internally be explained reasonably well by a single
-consistent rotation temperature in the range $T_{rot}\sim50-150$ K, the population
-distribution between vibrational excitation states cannot.}
-\label{fig:rotationdiagrams}
-\end{figure*}
 
 \input{NaCl_line_parameters.tex}
 \input{Na37Cl_line_parameters.tex}
