add note about origin of figure

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -678,6 +678,7 @@ are highly excited and exhibit a vibrational temperature significantly higher
 than the rotational temperature seen within any vibrational state.
 We show one example model in Figure \ref{fig:naclexcitationmodel}.
 
+% radiation_field_tests.py
 \begin{figure*}[!htp]
 \includegraphics[scale=1,width=4in]{figures/simulated_populations_with_wacky_radiation_field.pdf}
 \caption{This figure demonstrates that a bright emission feature in the mid-infrared may
